# mcp-citadel

./: BIDIRECTIONAL_SSE.md  CHANGELOG.md  Cargo.toml  HTTP_TRANSPORT.md  IMPLEMENTATION.md  IMPLEMENTATION_HTTP.md  PRODUCTION.md  README.md  ROBUSTNESS.md  com.mcp-citadel.plist  install-service.sh  install.sh  release_notes_v0.4.0.md  test_http.sh  test_http_simple.py  test_integration.py  test_unix_proper.py  test_unix_socket.sh  test_v0.4.0.sh  uninstall-service.sh
.github/workflows/: release.yml
src/: main.rs  metrics.rs
src/cli/: mod.rs
src/config/: mod.rs
src/daemon/: mod.rs
src/router/: mod.rs
src/transport/: http.rs  mod.rs  websocket.rs
