[package]
name = "mcp-citadel"
version = "0.1.0"
edition = "2021"
authors = ["Kevin Hill"]
description = "The Citadel: Central hub for routing multiple MCP servers with 67% memory savings"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1.46", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
futures = "0.3"
async-trait = "0.1"
dirs = "6.0"
nix = { version = "0.29", features = ["signal"] }
chrono = "0.4"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
